# Teacher-assistant

./: .gitignore  AGENTS.md  PLAN.md  README.md
backend/: debug_server.py  hypercorn_server.py  pyproject.toml  run.py  run_server.bat  run_uvicorn.py  run_with_log.py  start_server.py  test_server.bat
backend/app/: main.py  schemas.py
backend/app/core/: __init__.py  config.py  json_utils.py  llm.py  models.py
backend/app/modules/curriculum/: __init__.py  router.py  service.py
backend/app/modules/documents/: __init__.py  parsers.py  router.py  service.py
backend/app/modules/lessons/: __init__.py  router.py  service.py
backend/app/modules/slides/: __init__.py  router.py  service.py
backend/app/modules/topics/: __init__.py  router.py  service.py
backend/tests/: conftest.py  test_api.py  test_documents.py  test_pipeline_e2e.py  test_review_fixes.py
docs/: Architecture.md  Design.md  architecture.md  prompts.md
frontend/: eslint.config.mjs  next.config.js  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/health/: route.ts
frontend/src/app/curriculum/: page.tsx
frontend/src/app/lessons/: page.tsx
frontend/src/app/slides/: page.tsx
frontend/src/app/topics/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/: Layout.tsx  ui.tsx
frontend/src/lib/: api.ts  apiClient.ts
frontend/src/types/: api.ts
scripts/: verify-local.sh
