[tool.poetry]
name = "teacher-assistant"
version = "0.1.0"
description = "Teaching preparation assistant"
authors = ["Teacher"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
sqlmodel = "^0.0.14"
uvicorn = "^0.27.0"
python-multipart = "^0.0.6"
pydantic-settings = "^2.1.0"
pdfplumber = "^0.10.0"
python-pptx = "^0.6.23"
python-docx = "^1.1.0"
openpyxl = "^3.1.2"
jinja2 = "^3.1.3"
openai = "^1.12.0"
pymupdf = "^1.27.2.3"
pytesseract = "^0.3.13"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
httpx = "<0.28"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
